2008-06-01  Sam Steingold  <sds@gnu.org>

	* lispbibl.d (setjmp) [__MINGW32__]: define as _setjmp (but do not
	define longjmp as _longjmp because the latter does not exist)
	This is only necessary for lightning.
	Thanks to Yaroslav Kavenchuk <kavenchuk@tut.by> for investigation.

2008-06-01  Sam Steingold  <sds@gnu.org>

	* spvw.d (init_object_tab) [WIDE_HARD]: add :WORD-SIZE=64 to *FEATURES*
	* built.d (built_flags): show all WIDE_* variants

2008-05-31  Bruno Haible  <bruno@clisp.org>

	* m4/builtin_strlen.m4 (CL_BUILTIN_STRLEN): Assume ANSI C or C++.
	* m4/mprotect.m4 (CL_MPROTECT): Likewise.
	* m4/select.m4 (CL_SELECT): Likewise.
	* m4/signal.m4 (CL_SIGNAL_REINSTALL, CL_SIGNAL_UNBLOCK,
	CL_SIGNAL_BLOCK_OTHERS, CL_SIGACTION_REINSTALL, CL_SIGACTION_UNBLOCK):
	Likewise.

2008-05-31  Bruno Haible  <bruno@clisp.org>

	* configure.in: Remove AC_HEADER_STAT invocation.
	* unix.d: Ignore STAT_MACROS_BROKEN.

2008-05-31  Bruno Haible  <bruno@clisp.org>

	* configure.in: Remove AC_HEADER_TIME invocation. Instead simply test
	for <time.h> and <sys/time.h>.
	* m4/general.m4 (CL_MODULE_COMMON_CHECKS): Likewise.
	* unix.d: Don't test TIME_WITH_SYS_TIME. Assume <time.h> and
	<sys/time.h> are compatible.
	* modules/berkeley-db/bdb.c: Likewise.
	* modules/clx/new-clx/clx.f: Likewise.
	* modules/rawsock/rawsock.c: Likewise.
	* modules/syscalls/calls.c: Likewise.

2008-05-31  Bruno Haible  <bruno@clisp.org>

	* configure.in: Remove AC_STRUCT_TM invocation.

2008-05-31  Bruno Haible  <bruno@clisp.org>

	* configure.in: Remove CL_PERROR invocation.
	* _clisp.c (perror): Remove declaration fallback.
	* win32.d (HAVE_PERROR_DECL): Remove macro.
	* m4/perror.m4: Remove file.

2008-05-31  Bruno Haible  <bruno@clisp.org>

	* m4/proto.m4 (CL_PROTO_RET, CL_PROTO_TRY, CL_PROTO_CONST): Remove
	TRAD-DECL argument.
	* m4/connect.m4 (CL_CONNECT): Update.
	* m4/getpagesize.m4 (CL_GETPAGESIZE): Update.
	* m4/ioctl.m4 (CL_IOCTL): Update.
	* m4/putenv.m4 (CL_PUTENV): Update.